crates/nash-can/src/snapshots/nash_can__module__tests__do_block_unsupported.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nvalue = do\n    action\n"
---
[
    Unsupported {
        feature: "keyword expression",
        region: Region {
            start: Position {
                line: 3,
                column: 9,
            },
            end: Position {
                line: 4,
                column: 11,
            },
        },
    },
]
