crates/nash-can/src/snapshots/nash_can__module__tests__duplicate_binop.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ninfix left 6 (|>) = apR\n\ninfix left 6 (|>) = apR2\n\napR x f = f x\n\napR2 x f = f x\n"
info: diagnostic
---
nash::names::duplicate_binop

  × This file defines multiple (|>) operators.
   ╭─[src/Main.nash:5:1]
 2 │     
 3 │ ╭─▶ infix left 6 (|>) = apR
 4 │ ├─▶ 
   · ╰──── first definition
 5 │ ╭─▶ infix left 6 (|>) = apR2
 6 │ ├─▶ 
   · ╰──── and another first definition
 7 │     apR x f = f x
 8 │     
   ╰────
  help: Rename one of the definitions.
