crates/nash-can/src/snapshots/nash_can__module__tests__duplicate_ctor_error.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntype alias Point 'a = { x : 'a, y : 'a }\n\ntype Shape 'a\n    = Point 'a 'a\n    | Circle 'a\n"
info: diagnostic
---
nash::names::duplicate_ctor

  × This file defines multiple `Point` type constructors.
   ╭─[src/Main.nash:3:12]
 2 │ 
 3 │ type alias Point 'a = { x : 'a, y : 'a }
   ·            ──┬──
   ·              ╰── and another first definition
 4 │ 
 5 │ type Shape 'a
 6 │     = Point 'a 'a
   ·       ──┬──
   ·         ╰── first definition
 7 │     | Circle 'a
   ╰────
  help: Rename one of the definitions.
