crates/nash-can/src/snapshots/nash_can__module__tests__duplicate_export.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (Foo, Foo)\n\ntype alias Foo = Int\n"
info: diagnostic
---
nash::names::export_duplicate

  × Duplicate export `Foo`.
   ╭─[src/Main.nash:1:28]
 1 │ module Main exposing (Foo, Foo)
   ·                       ─┬─  ─┬─
   ·                        │    ╰── duplicate export
   ·                        ╰── first export
 2 │ 
   ╰────
  help: Remove the duplicate export.
