crates/nash-can/src/snapshots/nash_can__module__tests__duplicate_field_in_update.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf r = { r | x = 1, x = 2 }\n"
info: diagnostic
---
nash::names::duplicate_field

  × This record has multiple `x` fields.
   ╭─[src/Main.nash:3:20]
 2 │ 
 3 │ f r = { r | x = 1, x = 2 }
   ·             ┬      ┬
   ·             │      ╰── and another first definition
   ·             ╰── first definition
   ╰────
  help: Rename one of the definitions.
