crates/nash-can/src/snapshots/nash_can__module__tests__duplicate_let_bindings.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf =\n    let\n        x = 1\n        x = 2\n    in\n    x\n"
info: diagnostic
---
nash::names::duplicate_pattern

  × This `let` expression defines `x` more than once!
   ╭─[src/Main.nash:6:9]
 4 │     let
 5 │         x = 1
   ·         ┬
   ·         ╰── first definition
 6 │         x = 2
   ·         ┬
   ·         ╰── and another first definition
 7 │     in
   ╰────
  help: Rename one of the definitions.
