crates/nash-can/src/snapshots/nash_can__module__tests__duplicate_pattern_destruct.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf =\n    let\n        (x, x) = (1, 2)\n    in\n    x\n"
info: diagnostic
---
nash::names::duplicate_pattern

  × This `let` expression defines `x` more than once!
   ╭─[src/Main.nash:5:13]
 4 │     let
 5 │         (x, x) = (1, 2)
   ·          ┬  ┬
   ·          │  ╰── and another first definition
   ·          ╰── first definition
 6 │     in
   ╰────
  help: Rename one of the definitions.
