crates/nash-can/src/snapshots/nash_can__module__tests__duplicate_pattern_lambda_args.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf = \\x x -> x\n"
info: diagnostic
---
nash::names::duplicate_pattern

  × This anonymous function has multiple `x` arguments.
   ╭─[src/Main.nash:3:8]
 2 │ 
 3 │ f = \x x -> x
   ·      ┬ ┬
   ·      │ ╰── and another first definition
   ·      ╰── first definition
   ╰────
  help: Rename one of the definitions.
