crates/nash-can/src/snapshots/nash_can__module__tests__duplicate_type_alias_and_union.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntype alias Foo = Int\n\ntype Foo\n    = Bar\n"
info: diagnostic
---
nash::names::duplicate_type

  × This file defines multiple `Foo` types.
   ╭─[src/Main.nash:5:6]
 2 │ 
 3 │ type alias Foo = Int
   ·            ─┬─
   ·             ╰── first definition
 4 │ 
 5 │ type Foo
   ·      ─┬─
   ·       ╰── and another first definition
 6 │     = Bar
   ╰────
  help: Rename one of the definitions.
