crates/nash-can/src/snapshots/nash_can__module__tests__duplicate_type_two_aliases.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntype alias Foo = Int\n\ntype alias Foo = String\n"
info: diagnostic
---
nash::names::duplicate_type

  × This file defines multiple `Foo` types.
   ╭─[src/Main.nash:5:12]
 2 │ 
 3 │ type alias Foo = Int
   ·            ─┬─
   ·             ╰── first definition
 4 │ 
 5 │ type alias Foo = String
   ·            ─┬─
   ·             ╰── and another first definition
   ╰────
  help: Rename one of the definitions.
